--- a/SecureWallet/SecureWallet/Resources/layout/authenticate.axml
+++ b/SecureWallet/SecureWallet/Resources/layout/authenticate.axml
@@ -46,6 +46,7 @@
         android:src="@drawable/ic_fingerprint" />
 
     <TextView
+      android:id="@+id/txtAutenticationMsg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
