--- a/AndroidStudioProjects/MyApplication/app/src/main/res/layout/test_layout.xml
+++ b/AndroidStudioProjects/MyApplication/app/src/main/res/layout/test_layout.xml
@@ -4,59 +4,55 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@drawable/card_view_bottom" />
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:padding="2dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        android:text="Authenticate" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="2dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-
-        android:text="Unlock with your fingerprint."
-        android:textSize="16sp"
-        android:layout_marginBottom="10dp" />
-
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:orientation="horizontal">
-
         <ImageView
-            android:id="@+id/imgFingerPrint"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_margin="10dp"
-
-            android:layout_gravity="start"
-
-
+            android:id="@+id/imgLockUnLock"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="20dp"
             android:scaleType="fitXY"
-
-
-            android:src="@drawable/ic_fingerprint" />
-
+            android:src="@drawable/ic_lock" />
         <TextView
+            android:id="@+id/txtHeaderTitle"
+            android:padding="3dp"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="20dp"
+            android:layout_weight="1"
+            android:gravity="left|center"
+            android:text="text"
+            android:layout_alignParentLeft="true"
+            android:textStyle="bold" />
 
-            android:text="Touch sensor." />
-    </LinearLayout>
-
-
-
-
-
-
-
+        <ImageView
+            android:id="@+id/imgExpandCollapseIndicator"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="20dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_down_arrow" />
+    </RelativeLayout>
 
 </LinearLayout>
