--- a/SecureWallet/SecureWallet/Resources/layout/authenticate.axml
+++ b/SecureWallet/SecureWallet/Resources/layout/authenticate.axml
@@ -6,53 +6,72 @@
     android:layout_height="wrap_content">
 
 
-  <TextView
-      android:layout_width="wrap_content"
-      android:padding="2dp"
-      android:layout_height="wrap_content"
-      android:layout_margin="10dp"
-      android:textStyle="bold"
-      android:textSize="18sp"
-      android:text="Authenticate" />
-
-  <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:padding="2dp"
-      android:layout_marginLeft="10dp"
-      android:layout_marginRight="10dp"
-
-      android:text="Unlock with your fingerprint."
-      android:textSize="16sp"
-      android:layout_marginBottom="10dp" />
-
-  <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:orientation="horizontal">
-
-    <ImageView
-        android:id="@+id/imgFingerPrint"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+    <TextView
+        android:layout_width="match_parent"
+        android:padding="2dp"
+        android:layout_height="wrap_content"
         android:layout_margin="10dp"
-
-        android:layout_gravity="start"
-
-
-        android:scaleType="fitXY"
-
-
-        android:src="@drawable/ic_fingerprint" />
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:text="Authenticate" />
 
     <TextView
-      android:id="@+id/txtAutenticationMsg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="2dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:textColor="@color/black"
+        android:text="Unlock with your fingerprint."
+        android:textSize="18sp"
+        android:layout_marginBottom="10dp" />
 
-        android:text="Touch sensor." />
-  </LinearLayout>
+    <LinearLayout
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
+        <ImageView
+
+            android:id="@+id/imgFingerPrint"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+
+            android:layout_gravity="start"
+
+
+            android:scaleType="fitXY"
+
+
+            android:src="@drawable/ic_fingerprint" />
+
+        <TextView
+            android:padding="1dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
+            android:text="Touch sensor." />
+    </LinearLayout>
+
+
+    <TextView
+	    android:id="@+id/txtCancel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="2dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:textStyle="bold"
+        android:textColor="@color/blue"
+        android:text="CANCEL"
+        android:textSize="18sp"
+        android:layout_marginBottom="10dp" />
 
 
 
