--- a/SecureWallet/SecureWallet/Resources/layout/show_item_parent_adapter.axml
+++ b/SecureWallet/SecureWallet/Resources/layout/show_item_parent_adapter.axml
@@ -4,43 +4,55 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-  <View
-          android:layout_width="match_parent"
-          android:layout_height="2dp"
-          android:background="@drawable/card_view_bottom" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@drawable/card_view_bottom" />
 
 
-  <RelativeLayout
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_margin="10dp"
-      android:orientation="horizontal">
-
-    <TextView
-        android:id="@+id/txtHeaderTitle"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="20dp"
-        android:layout_weight="1"
-        android:gravity="left|center"
-        android:text="text"
-        android:layout_alignParentLeft="true"
-        android:textStyle="bold" />
+        android:layout_margin="10dp"
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/imgLockUnLock"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="20dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_lock" />
+        <TextView
+            android:id="@+id/txtHeaderTitle"
+            android:padding="3dp"
 
-    <ImageView
-        android:id="@+id/imgExpandCollapseIndicator"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="20dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/ic_down_arrow" />
-  </RelativeLayout>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="20dp"
+            android:layout_weight="1"
+            android:gravity="left|center"
+            android:text="text"
+            android:layout_alignParentLeft="true"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/imgExpandCollapseIndicator"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="20dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_down_arrow" />
+    </RelativeLayout>
 
 </LinearLayout>
