--- a/AndroidStudioProjects/MyApplication/app/src/main/res/layout/test_layout.xml
+++ b/AndroidStudioProjects/MyApplication/app/src/main/res/layout/test_layout.xml
@@ -17,28 +17,30 @@
         android:orientation="horizontal">
         <ImageView
             android:id="@+id/imgLockUnLock"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:layout_marginBottom="10dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="20dp"
             android:scaleType="fitXY"
+            
             android:src="@drawable/ic_lock" />
         <TextView
             android:id="@+id/txtHeaderTitle"
             android:padding="3dp"
-
+            android:textColor="@color/black"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="15dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_weight="1"
-            android:gravity="left|center"
+            android:gravity="left|top"
             android:text="text"
+            android:textSize="18sp"
             android:layout_alignParentLeft="true"
             android:textStyle="bold" />
 
