--- a/SecureWallet/SecureWallet/Resources/layout/authenticate.axml
+++ b/SecureWallet/SecureWallet/Resources/layout/authenticate.axml
@@ -50,7 +50,8 @@
 
             android:src="@drawable/ic_fingerprint" />
 
-        <TextView
+      <TextView
+           android:id="@+id/txtAutenticationMsg"
             android:padding="1dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
