--- a/SecureWallet/SecureWallet/Resources/layout/show_item_child_adapter.axml
+++ b/SecureWallet/SecureWallet/Resources/layout/show_item_child_adapter.axml
@@ -13,16 +13,25 @@
       android:orientation="horizontal">
 
     <TextView
+
         android:id="@+id/txtUserId"
+        android:layout_marginLeft="19dp"
+        android:padding="1dp"
+        android:textColor="@color/black"
+        android:textSize="16dp"
         android:layout_width="wrap_content"
-        android:layout_weight="1"
+
         android:layout_height="wrap_content"
         android:gravity="left|center"
         android:text="User Id :"/>
 
     <TextView
+
         android:id="@+id/txtUserIdValue"
-        android:layout_weight="1"
+        android:layout_marginRight="5dp"
+       android:layout_marginLeft="10dp"
+        android:textSize="16dp"
+        android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="left|center"
@@ -38,15 +47,23 @@
 
     <TextView
         android:id="@+id/txtPassword"
+        android:layout_marginLeft="19dp"
+        android:padding="1dp"
+        android:textColor="@color/black"
+        android:textSize="16dp"
         android:layout_width="wrap_content"
-        android:layout_weight="1"
+
         android:layout_height="wrap_content"
         android:gravity="left|center"
         android:text="Password :"/>
 
     <TextView
         android:id="@+id/txtPasswordValue"
-        android:layout_weight="1"
+
+        android:layout_marginRight="5dp"
+        android:layout_marginLeft="10dp"
+        android:textSize="16dp"
+        android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="left|center"
@@ -57,6 +74,8 @@
       android:id="@+id/txtAdditionalInfo"
       android:layout_margin="10dp"
       android:gravity="top|left"
+      android:textSize="16dp"
+      android:textColor="@color/black"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@drawable/edt_rect_border"
@@ -79,7 +98,7 @@
         android:layout_height="20dp"
         android:layout_margin="10dp"
 
-           
+
         android:scaleType="fitXY"
         android:src="@drawable/ic_edit" />
 
@@ -88,7 +107,7 @@
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_margin="10dp"
-
+        android:tint="@color/red"
 
 
         android:layout_marginLeft="10dp"
