--- a/AndroidStudioProjects/MyApplication/app/src/main/res/layout/test_layout.xml
+++ b/AndroidStudioProjects/MyApplication/app/src/main/res/layout/test_layout.xml
@@ -1,60 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="@drawable/card_view_bottom" />
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
 
-    <RelativeLayout
+
+
+    <TextView
+        android:id="@+id/txtTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:orientation="horizontal">
-        <ImageView
-            android:id="@+id/imgLockUnLock"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:layout_marginBottom="10dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp"
-            android:scaleType="fitXY"
-            
-            android:src="@drawable/ic_lock" />
-        <TextView
-            android:id="@+id/txtHeaderTitle"
-            android:padding="3dp"
-            android:textColor="@color/black"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="10dp"
-            android:layout_weight="1"
-            android:gravity="left|top"
-            android:text="text"
-            android:textSize="18sp"
-            android:layout_alignParentLeft="true"
-            android:textStyle="bold" />
+        android:text="Add information"
+        android:textStyle="bold"/>
 
-        <ImageView
-            android:id="@+id/imgExpandCollapseIndicator"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginBottom="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="20dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/ic_down_arrow" />
-    </RelativeLayout>
+    <EditText
+        android:id="@+id/edtTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Please enter title"
+        android:layout_margin="10dp"
+        android:inputType="text"
+        android:imeOptions="actionNext"
+        />
+    <EditText
+        android:id="@+id/edtUserId"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Please enter user id"
+        android:layout_margin="10dp"
+        android:inputType="text"
+        android:imeOptions="actionNext"
+        />
 
+    <EditText
+        android:id="@+id/edtPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:hint="Please enter password"
+        android:layout_margin="10dp"
+        android:imeOptions="actionNext"
+        />
+
+
+
+    <EditText
+        android:id="@+id/edtAdditionalInfo"
+        android:gravity="top|left"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:layout_margin="10dp"
+        android:background="@drawable/edt_rect_border"
+
+        android:hint="Please enter additional info"
+
+
+        android:inputType="textFilter|textMultiLine"
+
+        android:minHeight="148dp"
+
+
+        />
+
+    <Button
+        android:id="@+id/btnAdditionalInfo"
+        android:layout_width="300dp"
+
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="25dp"
+        android:background="@color/blue"
+        android:text="Add Info"
+        android:textColor="@color/white" />
 </LinearLayout>
