--- a/SecureWallet/SecureWallet/Resources/layout/add_info.axml
+++ b/SecureWallet/SecureWallet/Resources/layout/add_info.axml
@@ -52,7 +52,7 @@
       android:gravity="top|left"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      
+
       android:layout_margin="10dp"
       android:background="@drawable/edt_rect_border"
 
@@ -62,17 +62,18 @@
       android:inputType="textFilter|textMultiLine"
 
       android:minHeight="148dp"
-      
+
 
         />
 
   <Button
-     android:id="@+id/btnAdditionalInfo"
-      android:layout_width="match_parent"
+      android:id="@+id/btnAdditionalInfo"
+      android:layout_width="300dp"
+
       android:layout_height="wrap_content"
-      android:layout_gravity="bottom"
-      android:text="Add Info"
+      android:layout_gravity="center"
+      android:layout_marginTop="25dp"
       android:background="@color/blue"
-      android:textColor="@color/white"
-      android:layout_marginTop="61dp" />
+      android:text="Add Info"
+      android:textColor="@color/white" />
 </LinearLayout>
