--- a/SecureWallet/SecureWallet/Resources/layout/show_item_child_adapter.axml
+++ b/SecureWallet/SecureWallet/Resources/layout/show_item_child_adapter.axml
@@ -6,7 +6,10 @@
     android:layout_height="wrap_content">
 
   <LinearLayout
-      android:layout_margin="10dp"
+      android:layout_marginTop="10dp"
+      android:layout_marginBottom="10dp"
+      android:layout_marginLeft="25dp"
+      android:layout_marginRight="20dp"
 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
@@ -15,7 +18,7 @@
     <TextView
 
         android:id="@+id/txtUserId"
-        android:layout_marginLeft="19dp"
+         android:layout_marginLeft="15dp"
         android:padding="1dp"
         android:textColor="@color/black"
         android:textSize="16dp"
@@ -29,8 +32,11 @@
 
         android:id="@+id/txtUserIdValue"
         android:layout_marginRight="5dp"
-       android:layout_marginLeft="10dp"
+        android:layout_marginBottom="5dp"
+        android:padding="1dp"
+        android:layout_marginLeft="10dp"
         android:textSize="16dp"
+        android:text="hagdhasgfdhagfgdhafghasfghagsfhg"
         android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -39,7 +45,10 @@
   </LinearLayout>
 
   <LinearLayout
-      android:layout_margin="10dp"
+      android:layout_marginTop="10dp"
+      android:layout_marginBottom="10dp"
+      android:layout_marginLeft="25dp"
+      android:layout_marginRight="20dp"
 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
@@ -47,7 +56,7 @@
 
     <TextView
         android:id="@+id/txtPassword"
-        android:layout_marginLeft="19dp"
+        android:layout_marginLeft="15dp"
         android:padding="1dp"
         android:textColor="@color/black"
         android:textSize="16dp"
@@ -61,20 +70,26 @@
         android:id="@+id/txtPasswordValue"
 
         android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
+        android:padding="1dp"
         android:layout_marginLeft="10dp"
         android:textSize="16dp"
+        android:text="hagdhasgfdhagfgdhafghasfghagsfhg"
         android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="left|center"
             />
   </LinearLayout>
 
   <TextView
       android:id="@+id/txtAdditionalInfo"
-      android:layout_margin="10dp"
+      android:layout_marginLeft="25dp"
+      android:layout_marginRight="20dp"
+      android:layout_marginTop="10dp"
+      android:layout_marginBottom="10dp"
       android:gravity="top|left"
       android:textSize="16dp"
+      android:text="additional Infohdfchasgfhgahfghaghfghadgfhgahdgfhagdfh"
       android:textColor="@color/black"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
@@ -90,27 +105,32 @@
 
       android:layout_marginTop="10dp"
       android:layout_marginBottom="10dp"
-      android:layout_marginRight="10dp"
-      android:layout_marginLeft="10dp">
+      android:layout_marginRight="20dp"
+      android:layout_marginLeft="25dp">
     <ImageView
         android:id="@+id/imgEdit"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_margin="10dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
 
 
+        android:tint="@color/blue"
         android:scaleType="fitXY"
         android:src="@drawable/ic_edit" />
 
     <ImageView
         android:id="@+id/imgDelete"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_margin="10dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:tint="@color/red"
 
 
-        android:layout_marginLeft="10dp"
+           
         android:scaleType="fitXY"
 
 
