--- a/SecureWallet/SecureWallet/Resources/layout/add_info.axml
+++ b/SecureWallet/SecureWallet/Resources/layout/add_info.axml
@@ -13,6 +13,7 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="10dp"
+      android:textColor="@color/black"
       android:text="Add information"
       android:textStyle="bold"/>
 
