--- a/SecureWallet/SecureWallet/Resources/layout/add_info.axml
+++ b/SecureWallet/SecureWallet/Resources/layout/add_info.axml
@@ -52,8 +52,8 @@
       android:id="@+id/edtAdditionalInfo"
       android:gravity="top|left"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-
+      android:layout_height="150"
+      
       android:layout_margin="10dp"
       android:background="@drawable/edt_rect_border"
 
@@ -62,7 +62,7 @@
 
       android:inputType="textFilter|textMultiLine"
 
-      android:minHeight="148dp"
+     
 
 
         />
