--- a/SecureWallet/SecureWallet/Resources/layout/add_info.axml
+++ b/SecureWallet/SecureWallet/Resources/layout/add_info.axml
@@ -52,7 +52,7 @@
       android:id="@+id/edtAdditionalInfo"
       android:gravity="top|left"
       android:layout_width="match_parent"
-      android:layout_height="150"
+      android:layout_height="150dp"
       
       android:layout_margin="10dp"
       android:background="@drawable/edt_rect_border"
